--- a/github-actions-runner/templates/secret_github.yaml
+++ b/github-actions-runner/templates/secret_github.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 stringData:
   token: {{ .Values.runner.token }}
+  user: {{ .Values.runner.user }}
 kind: Secret
 metadata:
   name: "{{ include "runner.fullname" . }}-github"
