Add capabilities & rename podAnnotations to annotations
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/github-actions-runner/templates/deployment.yaml
+++ b/github-actions-runner/templates/deployment.yaml
@@ -11,7 +11,7 @@ spec:
       {{- include "runner.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
+      {{- with .Values.annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
@@ -45,6 +45,11 @@ spec:
             - name: https
               containerPort: 443
               protocol: TCP
+          securityContext:
+            {{- with .Values.capabilities }}
+            capabilities:
+              {{- toYaml . | nindent 14 }}
+            {{- end }}
       {{- if .Values.image.auth.enabled }}
       imagePullSecrets:
         - name: {{ .Values.image.auth.secret_name | default (printf "%s" ( include "runner.fullname" . )) }}
