--- a/github-actions-runner/values.yaml
+++ b/github-actions-runner/values.yaml
@@ -24,7 +24,9 @@ nameOverride: ""
 nodeSelector: {}
 tolerations: []
 runner:
-  org: osism
+  url: https://github.com
+  api_url: https://api.github.com
+  org: organisation
   name: github-actions-runner
   token: github_personal_access_token  # e.g. from a bot account, requires "admin:org" rights as well as admin role in organization
   user: github_user
