--- a/github-actions-runner/values.yaml
+++ b/github-actions-runner/values.yaml
@@ -28,5 +28,8 @@ runner:
   api_url: https://api.github.com
   organisation: organisation
   name: github-actions-runner
-  token: github_personal_access_token  # e.g. from a bot account, requires "admin:org" rights as well as admin role in organization
-  user: github_user
+  app_id: 123456
+  rsa_key: |-
+    -----BEGIN RSA PRIVATE KEY-----
+    foobar
+    -----END RSA PRIVATE KEY-----
