--- a/github-actions-runner/templates/secret_github.yaml
+++ b/github-actions-runner/templates/secret_github.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-stringData:
-  app_id: {{ .Values.runner.token }}
-  rsa_key: {{ .Values.runner.user }}
 kind: Secret
 metadata:
   name: "{{ include "runner.fullname" . }}-github"
+stringData:
+  app_id: {{ quote .Values.runner.app_id }}
+  rsa_key: {{ toYaml .Values.runner.rsa_key | indent 2}}
 type: Opaque
