--- a/github-actions-runner/Chart.yaml
+++ b/github-actions-runner/Chart.yaml
@@ -2,6 +2,14 @@ apiVersion: v2
 name: github-actions-runner
 description: A Helm chart to deploy self-hosted GitHub Actions runners
 type: application
-version: 1.3.3
+version: 1.3.4
 appVersion: "2.282.1"
 icon: https://unpkg.com/ionicons@5.5.2/dist/svg/return-up-forward-outline.svg
+dependencies:
+  - name: smarter-device-manager
+    version: "1.0.0"
+    repository: "https://osism.github.io/helm-charts"
+
+
+
+# todo: comitten, pushen, danach dann nochmal github-actions-runner packagen und amend comitten
