--- a/github-actions-runner/Chart.yaml
+++ b/github-actions-runner/Chart.yaml
@@ -1,7 +1,9 @@
+# This chart requires https://osism.github.io/helm-charts/smarter-device-manager:1.0.0
+# It cannot be defined as a dependency as it would be deleted when uninstalling this chart.
 apiVersion: v2
-name: github-actions-runner
+appVersion: "2.283.1"
 description: A Helm chart to deploy self-hosted GitHub Actions runners
-type: application
-version: 1.3.3
-appVersion: "2.282.1"
 icon: https://unpkg.com/ionicons@5.5.2/dist/svg/return-up-forward-outline.svg
+name: github-actions-runner
+type: application
+version: 1.3.6
