--- a/github-actions-runner/values.yaml
+++ b/github-actions-runner/values.yaml
@@ -18,11 +18,21 @@ image:
     # secret_name: 
 affinity: {}
 annotations: {}
-capabilities: {}
+capabilities:
+  add:
+    - NET_ADMIN
+    - SYS_TIME
+    - SETUID
+    - SETGID
 fullnameOverride: ""
 nameOverride: ""
 nodeSelector: {}
 tolerations: []
+resources:
+  limits:
+    smarter-devices/fuse: 1
+  requests:
+    smarter-devices/fuse: 1
 runner:
   url: https://github.com
   api_url: https://api.github.com
