added tls support for hound-search
Signed-off-by: Tim Beermann <beermann@osism.tech>

--- a/hound-search/values.yaml
+++ b/hound-search/values.yaml
@@ -32,6 +32,10 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+  tls: []
+  #  - secretName: hound-foobar-com
+  #    hosts:
+  #      - hound.foobar.com
 nameOverride: ""
 nodeSelector: {}
 service:
