--- a/hound/Chart.yaml
+++ b/hound/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 appVersion: "v0.4.0"
-description: A Helm chart to deploy hound-search
+description: A Helm chart to deploy hound
 icon: https://raw.githubusercontent.com/hound-search/hound/main/ui/assets/favicon.ico
-name: hound-search
+name: hound
 type: application
-version: 1.1.0
+version: 1.2.0
