--- a/hound/templates/config.yaml
+++ b/hound/templates/config.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "hound-search.fullname" . }}
+  name: {{ include "hound.fullname" . }}
 data:
   config: {{ .Values.houndconfig | quote }}
