--- a/hound/templates/service.yaml
+++ b/hound/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "hound-search.fullname" . }}
+  name: {{ include "hound.fullname" . }}
   labels:
-    {{- include "hound-search.labels" . | nindent 4 }}
+    {{- include "hound.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "hound-search.selectorLabels" . | nindent 4 }}
+    {{- include "hound.selectorLabels" . | nindent 4 }}
