Change Runner Name to pod name
Signed-off-by: Fynn Späker <spaeker@23technologies.cloud>

--- a/github-actions-runner/templates/deployment.yaml
+++ b/github-actions-runner/templates/deployment.yaml
@@ -31,7 +31,9 @@ spec:
             - name: SECRET_GITHUB_URL
               value: {{ .Values.runner.url }}
             - name: SECRET_NAME
-              value: {{ .Values.runner.name }}
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
             - name: SECRET_GITHUB_APP_ID
               valueFrom:
                 secretKeyRef:
