github-actions-runner: use 2.286.0
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/github-actions-runner/values.yaml
+++ b/github-actions-runner/values.yaml
@@ -4,7 +4,7 @@ image:
   name: osism/github-actions-runner
   pullPolicy: Always
   repository: quay.io
-  tag: "latest"
+  tag: "2.286.0"
   auth:
     enabled: false
     # username:
