--- a/github-actions-runner/values.yaml
+++ b/github-actions-runner/values.yaml
@@ -28,11 +28,7 @@ fullnameOverride: ""
 nameOverride: ""
 nodeSelector: {}
 tolerations: []
-resources:
-  limits:
-    smarter-devices/fuse: 1
-  requests:
-    smarter-devices/fuse: 1
+resources: []
 runner:
   url: https://github.com
   api_url: https://api.github.com
