Add aptly helm-chart
Signed-off-by: Tim Beermann <beermann@osism.tech>

--- a/aptly/templates/tests/test-connection.yaml
+++ b/aptly/templates/tests/test-connection.yaml
@@ -11,9 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "aptly.fullname" . }}:{{ .Values.service_api.port }}']
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args: ['{{ include "aptly.fullname" . }}:{{ .Values.service_nginx.port }}']
+      args: ['{{ include "aptly.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
