--- a/aptly/templates/deployment_nginx.yaml
+++ b/aptly/templates/deployment_nginx.yaml
@@ -1,11 +1,14 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "aptly.fullname" . }}
+  name: {{ include "aptly.fullname" . }}-nginx
   labels:
     {{- include "aptly.labels" . | nindent 4 }}
 spec:
+  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "aptly.selectorLabels" . | nindent 6 }}
@@ -22,35 +25,37 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      serviceAccountName: {{ include "aptly.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+        - name: {{ .Chart.Name }}-prepare
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image_prepare.repository }}:{{ .Values.image_prepare.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image_prepare.pullPolicy }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - mountPath: /opt/aptly
+              name: data
+            - mountPath: /root/.gnupg
+              name: gpg
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.image_nginx.repository }}:{{ .Values.image_nginx.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image_nginx.pullPolicy }}
           ports:
-            - name: http-api
-              containerPort: {{ .Values.service_api.port }}
+            - name: http
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
-            - name: http-nginx
-              containerPort: {{ .Values.service_nginx.port }}
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /api/version
-              port: http-api
-          readinessProbe:
-            httpGet:
-              path: /api/version
-              port: http-api
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-            - name: data
-              mountPath: /opt/aptly
-              subPath: {{ .Values.persistence.subPath }}
+            - mountPath: /opt/aptly
+              name: data
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -67,7 +72,14 @@ spec:
         - name: data
           {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
-            claimName: {{ .Values.persistence.existingClaim | default (include "aptly.pvc" .) }}
+            claimName: {{ .Values.persistence.data.existingClaim | default (include "aptly.data_volume" .) }}
+          {{- else }}
+          emptyDir: {}
+          {{- end }}
+        - name: gpg
+          {{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.persistence.gpg.existingClaim | default (include "aptly.gpg_volume" .) }}
           {{- else }}
           emptyDir: {}
           {{- end }}
