--- a/aptly/templates/ingress.yaml
+++ b/aptly/templates/ingress.yaml
@@ -1,9 +1,10 @@
-{{- if .Values.ingress_nginx.enabled -}}
+---
+{{- if .Values.ingress.enabled -}}
 {{- $fullName := include "aptly.fullname" . -}}
-{{- $svcPort := .Values.service_nginx.port -}}
-{{- if and .Values.ingress_nginx.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingress_nginx.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingress_nginx.annotations "kubernetes.io/ingress.class" .Values.ingress_nginx.className}}
+{{- $svcPort := .Values.service.port -}}
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -15,21 +16,20 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: "{{ template "aptly.nginx" . }}"
+  name: {{ $fullName }}
   labels:
     {{- include "aptly.labels" . | nindent 4 }}
-    component: nginx
-  {{- with .Values.ingress_nginx.annotations }}
+  {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.ingress_nginx.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress_nginx.className }}
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
   {{- end }}
-  {{- if .Values.ingress_nginx.tls }}
+  {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingress_nginx.tls }}
+    {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -38,7 +38,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress_nginx.hosts }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
@@ -50,11 +50,11 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: "{{ template "aptly.nginx" $ }}"
+                name: {{ $fullName }}
                 port:
                   number: {{ $svcPort }}
               {{- else }}
-              serviceName: "{{ template "aptly.nginx" $ }}"
+              serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
