--- a/aptly/templates/service.yaml
+++ b/aptly/templates/service.yaml
@@ -1,16 +1,16 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ template "aptly.nginx" . }}"
+  name: {{ include "aptly.fullname" . }}
   labels:
     {{- include "aptly.labels" . | nindent 4 }}
-    component: nginx
 spec:
-  type: {{ .Values.service_nginx.type }}
+  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service_nginx.port }}
-      targetPort: http-nginx
+    - port: {{ .Values.service.port }}
+      targetPort: http
       protocol: TCP
-      name: http-nginx
+      name: http
   selector:
     {{- include "aptly.selectorLabels" . | nindent 4 }}
